# kitware_slam

./: CMakeLists.txt  README.md
Superbuild/: CMakeLists.txt  superbuild_import.cmake.in
Tests/: SLAM_evaluate.py  SLAM_run.py  SLAM_tests.py
ci/: .gitlab-ci.yml  Dockerfile  README.md
ci/ros2_humble/: Dockerfile  (+1 more)
cmake/: Config.cmake.in
docker/: Dockerfile.env  Dockerfile.slam  README.md  install_slam.bash
fix_ros2_bag_inconsistency/: eval_timestamp.py  launchfile_test.py  loop_ros2_command.sh  test_ros2bag.sh  timestamp.txt
logfiles_slam_node/: check_localization_time.py
paraview_wrapping/: CMakeLists.txt  Slam.xml  vtkSlam.cxx  vtkSlam.h  (+2 more)
slam_lib/: CMakeLists.txt  README.txt
slam_lib/include/LidarSlam/: BasaltSpline.h  CeresCostFunctions.h  DenseSpinningSensorKeypointExtractor.h  Enums.h  ExternalSensorManagers.h  InterpolationModels.h  KDTreePCLAdaptor.h  KalmanFilter.h  KeypointExtractor.h  KeypointsMatcher.h  KeypointsRegistration.h  PoseGraphOptimization.h  PoseGraphOptimizer.h  RollingGrid.h  SensorConstraints.h  SharedList.h  Slam.h  SpinningSensorKeypointExtractor.h  State.h  StateVector.h  Transform.h  Utilities.h  VoxelGrid.h
slam_lib/include/ScanContext/: ScanContext.h  tictoc.h  utility.h
slam_lib/src/: BasaltSpline.cxx  DenseSpinningSensorKeypointExtractor.cxx  ExternalSensorManagers.cxx  InterpolationModels.cxx  KalmanFilter.cxx  KeypointExtractor.cxx  KeypointsMatcher.cxx  KeypointsRegistration.cxx  LocalOptimizer.cxx  NormalEstimation.cxx  PoseGraphOptimization.cxx  PoseGraphOptimizer.cxx  RollingGrid.cxx  ScanContext.cxx  SensorConstraints.cxx  Slam.cxx  SpinningSensorKeypointExtractor.cxx  State.cxx  StateVector.cxx  Transform.cxx  VoxelGrid.cxx  test_KalmanFilter.cxx
slam_lib/test/: rotation_interpo.cxx
slam_lib/test_folder/: test_model_interpolation.cpp
(+75 files in other folders)
